--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
         <a href="EX10.html" class="exercise-card">EX10 </a>
         <a href="EX11.html" class="exercise-card">EX11 </a>
         <a href="EX12.html" class="exercise-card">EX12 </a>
+           <a href="EX13.html" class="exercise-card">EX13 </a>
+        <a href="EX14.html" class="exercise-card">EX14 </a>
       </nav>
     </div>
   </body>
 </html>
+
